--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webframe-server",
   "description": "Node.js framework for building REST servers",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "repository": {
     "type": "git",
     "url": "git://github.com/comunity/webframe-server.git"
@@ -15,7 +15,8 @@
   "dependencies": {
     "underscore.string": "*",
 	"promisefy": ">0.0.2",
-	"webframe-base": "*"
+	"webframe-base": "*",
+	"formidable": "*"
     },
   "devDependencies": {},
   "author": {
