--- a/webframe-server.csproj
+++ b/webframe-server.csproj
@@ -64,7 +64,7 @@
     <Content Include="index.ts" />
     <Content Include="memoryStream.ts" />
     <Content Include="pullStream.ts" />
-    <Content Include="StreamMsg.ts" />
+    <Content Include="StreamMesg.ts" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="package.json" />
